k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: waste-mlops
  labels:
    app.kubernetes.io/name: waste-management
    app.kubernetes.io/part-of: waste-mlops
