k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waste-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waste-backend
  template:
    metadata:
      labels:
        app: waste-backend
    spec:
      containers:
        - name: waste-backend
          image: waste-backend:latest
          imagePullPolicy: Never   

          ports:
            - containerPort: 8001
