k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waste-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waste-backend
  template:
    metadata:
      labels:
        app: waste-backend
    spec:
      containers:
        - name: waste-backend
          image: waste-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: waste-backend-svc
spec:
  selector:
    app: waste-backend
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30001
