k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waste-backend-svc
spec:
  selector:
    app: waste-backend
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30001
